<resources>
    <string name="app_name">211 Android L</string>
    <string name="nama">Nama</string>
    <string name="isi_nama_lengkap">Isi Nama Lengkap</string>
    <string name="email">Email</string>
    <string name="isi_dengan_email_valid">Isi dengan email valid</string>
    <string name="isi_dengan_nomor_yang_valid">Isi dengan nomor yang aktif</string>
    <string name="phone">Phone</string>
    <string name="isi_tanggal_lahir">Isi Tanggal Lahir</string>
    <string name="tanggal_lahir">Tanggal Lahir</string>
    <string name="isi_dengan_jumlah_sks_yang_ditempuh">Isi dengan jumlah SKS yang ditempuh</string>
    <string name="simpan">Simpan</string>
    <string name="batal">Batal</string>
    <string name="jumlah_sks">Jumlah SKS</string>
    <string name="siti_aulia_urrahmah">Siti Aulia Urrahmah</string>
    <string name="email_siti">sitiaulia1092@gmail.com</string>
    <string name="aplikasi_android_ku">Aplikasi Android Ku</string>
</resources>