<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/tv_nama"
        android:layout_margin="8dp"
        android:text="@string/nama"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <EditText
        android:id="@+id/et_nama"
        android:layout_margin="8dp"
        android:inputType="textPersonName"
        android:hint="@string/isi_nama_lengkap"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>


    <TextView
        android:id="@+id/tv_email"
        android:layout_margin="8dp"
        android:text="@string/email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <EditText
        android:id="@+id/et_email"
        android:layout_margin="8dp"
        android:inputType="textEmailAddress"
        android:hint="@string/isi_dengan_email_valid"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>


    <TextView
        android:id="@+id/tv_phone"
        android:layout_margin="8dp"
        android:text="@string/phone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <EditText
        android:id="@+id/et_phone"
        android:layout_margin="8dp"
        android:inputType="phone"
        android:hint="@string/isi_dengan_nomor_yang_valid"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>


    <TextView
        android:id="@+id/tv_lahir"
        android:layout_margin="8dp"
        android:text="@string/tanggal_lahir"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <EditText
        android:id="@+id/et_lahir"
        android:layout_margin="8dp"
        android:inputType="date"
        android:hint="@string/isi_tanggal_lahir"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>


    <TextView
        android:id="@+id/tv_sks"
        android:layout_margin="8dp"
        android:text="@string/jumlah_sks"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <EditText
        android:id="@+id/et_sks"
        android:layout_margin="8dp"
        android:inputType="textPersonName"
        android:hint="@string/isi_dengan_jumlah_sks_yang_ditempuh"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="end"
        >

        <Button
            android:id="@+id/simpan"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/simpan"
            android:drawableLeft="@drawable/ic_baseline_save_24"
            android:backgroundTint="@color/success"
            android:drawableTint="@color/white"
            android:layout_margin="8dp"
            tools:ignore="RtlHardcoded" />
        <Button
            android:id="@+id/batal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/batal"
            android:drawableLeft="@drawable/ic_baseline_cancel_24"
            android:backgroundTint="@color/danger"
            android:drawableTint="@color/white"
            android:layout_margin="8dp"
            tools:ignore="RtlHardcoded" />

    </LinearLayout>

</LinearLayout>