<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ResultActivity">

    <TextView
        android:id="@+id/tv_nama"
        android:layout_margin="8dp"
        android:text="@string/nama"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <TextView
        android:id="@+id/tv_nama_isi"
        android:layout_margin="8dp"
        android:text="@string/siti_aulia_urrahmah"
        android:textSize="30sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <TextView
        android:id="@+id/tv_email"
        android:layout_margin="8dp"
        android:text="@string/email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <TextView
        android:id="@+id/tv_email_isi"
        android:layout_margin="8dp"
        android:textSize="20sp"
        android:text="@string/email_siti"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>
</LinearLayout>